   * the `armac` subdriver was enhanced to support devices with a different
     response pattern than previously expected per initial contribution.
     It was tested to work with Vultech V2000 and Armac PF1 series. [#1978]

 - nutdrv_qx and blazer updates:
   * extended default ranges for max battery voltage when guessing [#1279]

 - usbhid-ups updates:
   * cps-hid subdriver now applies same report descriptor fixing logic to
     devices with ProductID 0x0601 as done earlier for 0x0501, to get the
     correct output voltage data [#1497]
   * apc-hid subdriver now also supports ProductID 0x0004 [#1429]
   * ever-hid subdriver reported a `powerfactor` without a namespace (bug
     in 2.8.0 release), fixed to `outlet.powerfactor`
   * the `usbhid-ups` driver should now reconnect if `libusb` returned a
     memory allocation error [#1422] (seen as "Can't retrieve Report 0a:
     Resource temporarily unavailable"), which can cause practical problems
     in the field -- the driver otherwise interpreted the situation as
     `ups.status` being `OL OFF` and cut the power supply.
   * powercom-hid subdriver: fixed `UPS.Battery.ManufacturerDate` to map
     to `battery.mfr.date` (not `battery.date` which is the maintenance
     replacement date) [#1644]

 - powercom driver should now try harder to refresh data from device [#356]

 - apcupsd-ups:
   * improvement for `POLL_INTERVAL_MIN` from PR #797 was buggy [#2007]
   * fix to clean obsoleted readings (if any) AFTER getting new info from an
     `apcupsd` daemon, to avoid the gap when NUT driver knows nothing [#2007]

 - NUT for Windows:
   * Ability to build NUT for Windows, last tackled with a branch based on
     NUT v2.6.5 a decade ago, has been revived with the 2.8.x era codebase [#5].
     It is known that at this time some features are not complete, for more
     details see https://github.com/orgs/networkupstools/projects/2/views/1
   * Cross-builds of NUT for Windows using Linux and MinGW (and many custom